hphp/hack/test/typecheck/ppl/obj_call_constructor.php
<?hh // strict

<<__PPL>>
class MyClass {
  public function __construct() {
    $this->myMethod();
  }

  public function myMethod(): void {}
}
